--- a/package.json
+++ b/package.json
@@ -1,8 +1,17 @@
 {
   "name": "cloud-letter",
   "version": "0.0.1",
+  "description": "reactwritten cloud letter",
+  "keywords": [ "react", "component", "library", "cloud", "word", "unite", "round", "corner" ],
+  "author": {
+    "name" : "Sergey Borovikov",
+    "email" : "foretoo@proton.me",
+    "url" : "https://foretoo.github.io"
+  },
+  "license": "MIT",
   "type": "module",
-  "main": "",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.js",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
