--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "polygon-clipping": "^0.15.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "round-polygon": "^0.6.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
