--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "types": "./dist/index.d.js",
   "scripts": {
     "dev": "vite --config ./config/dev.ts",
-    "build": "tsc && vite build --config ./config/build.ts",
+    "build": "rm -rf dist && tsc -p tsconfig.lib.json && eslint --fix dist",
     "public": "tsc && vite build --config ./config/public.ts"
   },
   "dependencies": {
@@ -22,8 +22,8 @@
     "round-polygon": "^0.6.7"
   },
   "peerDependencies": {
-    "react": ">= 16.8.0",
-    "react-dom": ">= 16.8.0"
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
