--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -1,6 +1,7 @@
 {
 	"compilerOptions": {
 		"declaration": true,
+		"sourceMap": true,
 		"allowSyntheticDefaultImports": true,
 		"esModuleInterop": true,
 		"skipLibCheck": true,
