--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -13,6 +13,5 @@
 		"jsx": "react",
 		"moduleResolution": "Node",
 	},
-	"include": ["src/component/index.ts"],
-	"exclude": ["node_modules"]
+	"include": ["src/component/index.ts"]
 }
