--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "cloud-letter",
+  "name": "react-cloud-letter",
   "version": "0.2.1",
-  "description": "reactwritten cloud letter",
-  "keywords": [ "react", "component", "library", "cloud", "word", "unite", "round", "corner" ],
+  "description": "Wrap your letter in lovely cloud-like shape with React.",
+  "keywords": [ "react", "component", "library", "cloud", "word", "geometry", "boolean-operations", "unite", "automerge", "round", "corner", "rounded-corners", "polygon" ],
   "author": {
     "name": "Sergey Borovikov",
     "email": "foretoo@proton.me",
