--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": ">=16.8.0"
   },
   "devDependencies": {
+    "@preact/preset-vite": "^2.3.0",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
