--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,8 @@
         "object-property-newline": [ 1, {
             "allowAllPropertiesOnSameLine": true
         }],
+        "nonblock-statement-body-position": [ 1, "beside" ],
+        "max-statements-per-line": [ 1, { "max": 1 }],
         "quotes": [ 1, "double", {
             "allowTemplateLiterals": true
         }],
